fix: Shadow 包重定位 + module-info 实验记录
- 替换 jarJar 为 Shadow 插件，重定位 org.luaj -> com.debugbridge.luaj
- 移除 jarJar('org.luaj:luaj-jse:3.0.1')，改为 Shadow relocation
- 添加精确的 include/exclude 规则，防止游戏资源混入 JAR
- module-info.java 实验：NeoForge moddev 不兼容 JPMS 具名模块，已移除
- 更新 ARCHITECTURE.md 记录方案和决策